--- a/Alpine.html
+++ b/Alpine.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Alpine</h1>
     <p>La presentazione della A524 è avvenuta il 7 febbraio.</p>
-    <img src="../presentazioni 2024/Alpine launch TWO liveries for 2024 car 💙🩷.gif" alt="Presentazione della A524.">
+    <img src="presentazioni 2024/alpine-a524-2.jpg" alt="Presentazione della A524.">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Pierre_Gasly" target="_blank">Pierre Gasly</a> e <a href="https://it.wikipedia.org/wiki/Esteban_Ocon" target="_blank">Esteban Ocon</a>;</li>
         <li>Posizione in classifica 2023: 6° con 120 punti;</li>
