--- a/Aston Martin.html
+++ b/Aston Martin.html
@@ -10,7 +10,7 @@
 <body>
     <H1>Aston Martin</H1>
     <p>La presentazione della AMR24 è avvenuta il 12 febbraio.</p>
-    <img src="../presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="Presentazione della AMR24">
+    <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="Presentazione della AMR24">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Fernando_Alonso" target="_blank">Fernando Alonso</a> e <a href="https://it.wikipedia.org/wiki/Lance_Stroll" target="_blank">Lance Stroll</a>;</li>
         <li>Posizione in classifica 2023: 5° con 280 punti;</li>
