--- a/Ferrari.html
+++ b/Ferrari.html
@@ -10,7 +10,7 @@
 <body>
     <H1>Ferrari</H1>
     <p>La presentazione della SF-24 è avvenuta il 13 febbraio.</p>
-    <img src="../presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="Presentazione della SF-24">
+    <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="Presentazione della SF-24">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Charles_Leclerc" target="_blank">Charles Leclerc</a> e <a href="https://it.wikipedia.org/wiki/Carlos_Sainz" target="_blank">Carlos Sainz</a>;</li>
         <li>Posizione in classifica 2023: 3° con 406 punti;</li>
