--- a/Haas.html
+++ b/Haas.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Haas</h1>
     <p>La presentazione della VF24 è avvenuta il 2 febbraio.</p>
-    <img src="../presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="Presentazione della VF24.">
+    <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="Presentazione della VF24.">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Kevin_Magnussen" target="_blank">Kevin Magnussen</a> e <a href="https://it.wikipedia.org/wiki/Nico_Hulkemberg" target="_blank">Nico Hulkemberg</a>;</li>
         <li>Posizione in classifica 2023: 10° con 12 punti;</li>
