--- a/presentazioni.html
+++ b/presentazioni.html
@@ -9,16 +9,36 @@
 <body>
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
-        <li><a href="" target="_blank">RB20</a></li>
-        <li><a href="" target="_blank">W15</a></li>
-        <li><a href="Ferrari.html" target="_blank">SF24</a></li>
-        <li><a href="McLaren.html" target="_blank">MCL38</a></li>
-        <LI><a href="Aston Martin.html" target="_blank">AMR24</a></LI>
-        <li><a href="Alpine.html" target="_blank">A524</a></li>
-        <li><a href="Williams.html" target="_blank">FW46</a></li>
-        <li><a href="Visa cash app RB.html" target="_blank">VCARB01</a></li>
-        <li><a href="Stake Team.html" target="_blank">C44</a></li>
-        <li><a href="Haas.html" target="_blank">VF24</a></li>
+        <li>
+            <a href="" target="_blank">RB20</a>
+        </li>
+        <li>
+            <a href="" target="_blank">W15</a>
+        </li>
+        <li>
+            <a href="Ferrari.html" target="_blank">SF24</a>
+        </li>
+        <li>
+            <a href="McLaren.html" target="_blank">MCL38</a>
+        </li>
+        <LI>
+            <a href="Aston Martin.html" target="_blank">AMR24</a>
+        </LI>
+        <li>
+            <a href="Alpine.html" target="_blank">A524</a>
+        </li>
+        <li>
+            <a href="Williams.html" target="_blank">FW46</a>
+        </li>
+        <li>
+            <a href="Visa cash app RB.html" target="_blank">VCARB01</a>
+        </li>
+        <li>
+            <a href="Stake Team.html" target="_blank">C44</a>
+        </li>
+        <li>
+            <a href="Haas.html" target="_blank">VF24</a>
+        </li>
     </ol>
 </body>
 </html>
