--- a/Alpine.html
+++ b/Alpine.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/alpine-a524-2.jpg" alt="Presentazione della A524.">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Pierre_Gasly" target="_blank">Pierre Gasly</a> e <a href="https://it.wikipedia.org/wiki/Esteban_Ocon" target="_blank">Esteban Ocon</a>;</li>
-        <li>Posizione in classifica 2023: 6° con 120 punti;</li>
+        <li>Posizione in classifica 2023: 6° con 120 punti.</li>
     </ul>
 </body>
 </html>
