--- a/McLaren.html
+++ b/McLaren.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="Presentazione della MCL38">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Lando_Norris" target="_blank">Lando Norris</a> e <a href="https://it.wikipedia.org/wiki/Oscar_Piastri" target="_blank">Oscar Piastri</a>;</li>
-        <li>Posizione in classifica 2023: 4° con 302 punti;</li>
+        <li>Posizione in classifica 2023: 4° con 302 punti.</li>
     </ul>
 </body>
 </html>
