--- a/Visa cash app RB.html
+++ b/Visa cash app RB.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="Presentazione della VCARB01.">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Yuki_Tsunoda" target="_blank">Yuki Tsunoda</a> e <a href="https://it.wikipedia.org/wiki/Daniel_Ricciardo" target="_blank">Daniel Ricciardo</a>;</li>
-        <li>Posizione in classifica 2023: 8° con 25 punti;</li>
+        <li>Posizione in classifica 2023: 8° con 25 punti.</li>
     </ul>
 </body>
 </html>
