--- a/Aston Martin.html
+++ b/Aston Martin.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="Presentazione della AMR24">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Fernando_Alonso" target="_blank">Fernando Alonso</a> e <a href="https://it.wikipedia.org/wiki/Lance_Stroll" target="_blank">Lance Stroll</a>;</li>
-        <li>Posizione in classifica 2023: 5° con 280 punti;</li>
+        <li>Posizione in classifica 2023: 5° con 280 punti.</li>
     </ul>
 </body>
 </html>
