--- a/Ferrari.html
+++ b/Ferrari.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="Presentazione della SF-24">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Charles_Leclerc" target="_blank">Charles Leclerc</a> e <a href="https://it.wikipedia.org/wiki/Carlos_Sainz" target="_blank">Carlos Sainz</a>;</li>
-        <li>Posizione in classifica 2023: 3° con 406 punti;</li>
+        <li>Posizione in classifica 2023: 3° con 406 punti.</li>
     </ul>
 </body>
 </html>
