--- a/Williams.html
+++ b/Williams.html
@@ -13,7 +13,7 @@
     <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="Presentazione della FW46.">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Alexander_Albon" target="_blank">Alexander Albon</a> e <a href="https://it.wikipedia.org/wiki/Logan_Sergeant" target="_blank">Logan Sergeant</a>;</li>
-        <li>Posizione in classifica 2023: 7° con 28 punti;</li>
+        <li>Posizione in classifica 2023: 7° con 28 punti.</li>
     </ul>
 </body>
 </html>
