--- a/Mercedes.html
+++ b/Mercedes.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McLaren</title>
+    <title>Mercedes</title>
     <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="McLaren.css">
+    <link rel="stylesheet" href="Mercedes.css">
 </head>
 <body>
-    <H1>McLaren</H1>
-    <p>La presentazione della MCL38 è avvenuta il 16 gennaio.</p>
+    <H1>Mercedes</H1>
+    <p>La presentazione della W15 è avvenuta il 14 febbraio.</p>
     <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="Presentazione della MCL38">
     <ul>
-        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Lando_Norris" target="_blank">Lando Norris</a> e <a href="https://it.wikipedia.org/wiki/Oscar_Piastri" target="_blank">Oscar Piastri</a>;</li>
+        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/George_Russell" target="_blank">George Russell</a> e <a href="https://it.wikipedia.org/wiki/Lewis_Hamilton" target="_blank">Lewis Hamilton</a>;</li>
         <li>Posizione in classifica 2023: 2° con 409 punti.</li>
     </ul>
 </body>
