--- a/presentazioni.html
+++ b/presentazioni.html
@@ -10,10 +10,10 @@
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
         <li>
-            <a href="" target="_blank">RB20</a>
+            <a href="Red Bull.html" target="_blank">RB20</a>
         </li>
         <li>
-            <a href="" target="_blank">W15</a>
+            <a href="Mercedes.html" target="_blank">W15</a>
         </li>
         <li>
             <a href="Ferrari.html" target="_blank">SF24</a>
