--- a/Aston Martin.html
+++ b/Aston Martin.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aston Martin</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Aston Martin.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Aston Martin.css">
 </head>
 <body>
     <H1>Aston Martin</H1>
