--- a/Haas.html
+++ b/Haas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haas</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Haas.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Haas.css">
 </head>
 <body>
     <h1>Haas</h1>
