--- a/Red Bull.html
+++ b/Red Bull.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Bull</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Red Bull.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Red Bull.css">
 </head>
 <body>
     <H1>Red Bull</H1>
