--- a/Visa cash app RB.html
+++ b/Visa cash app RB.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visa cash app RB</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Visa cash app RB.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Visa cash app RB.css">
 </head>
 <body>
     <h1>Visa cash app RB</h1>
