--- a/Williams.html
+++ b/Williams.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Williams</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Williams.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Williams.css">
 </head>
 <body>
     <h1>Williams</h1>
