--- a/presentazioni.html
+++ b/presentazioni.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentazioni 2024</title>
-    <link rel="stylesheet" href="presentazioni.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/presentazioni.css">
 </head>
 <body>
     <h1>Queste sono le vetture per il 2024:</h1>
