--- a/Alpine.html
+++ b/Alpine.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpine</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Alpine.css">
+    <link rel="stylesheet" href="css/Alpine.css">
+    <link rel="stylesheet" href="css/tutti.css">
 </head>
 <body>
     <h1>Alpine</h1>
