--- a/Ferrari.html
+++ b/Ferrari.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferrari</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Ferrari.CSS">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Ferrari.css">
 </head>
 <body>
     <H1>Ferrari</H1>
