--- a/Mercedes.html
+++ b/Mercedes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercedes</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Mercedes.css">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Mercedes.css">
 </head>
 <body>
     <H1>Mercedes</H1>
