--- a/Stake Team.html
+++ b/Stake Team.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stake team</title>
-    <link rel="stylesheet" href="tutti.css">
-    <link rel="stylesheet" href="Stake Team.CSS">
+    <link rel="stylesheet" href="css/tutti.css">
+    <link rel="stylesheet" href="css/Stake Team.CSS">
 </head>
 <body>
     <H1>Stake team</H1>
