--- a/McLaren.html
+++ b/McLaren.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <H1>McLaren</H1>
-    <p>La presentazione della MCL38 è avvenuta il 16 gennaio.</p>
+    <p>La presentazione della MCL38 è avvenuta il 14 febbraio.</p>
     <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="Presentazione della MCL38">
     <ul>
         <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Lando_Norris" target="_blank">Lando Norris</a> e <a href="https://it.wikipedia.org/wiki/Oscar_Piastri" target="_blank">Oscar Piastri</a>;</li>
