--- a/presentazioni.html
+++ b/presentazioni.html
@@ -11,34 +11,84 @@
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
         <li>
-            <a href="Red Bull.html" target="_blank">RB20</a>
+            <a href="Red Bull.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/rb20.webp" alt="">
+                <figcaption>RB20</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="Mercedes.html" target="_blank">W15</a>
+            <a href="Mercedes.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="">
+                <figcaption>W15</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="Ferrari.html" target="_blank">SF24</a>
+            <a href="Ferrari.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="">
+                <figcaption>SF24</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="McLaren.html" target="_blank">MCL38</a>
-        </li>
-        <LI>
-            <a href="Aston Martin.html" target="_blank">AMR24</a>
-        </LI>
-        <li>
-            <a href="Alpine.html" target="_blank">A524</a>
-        </li>
-        <li>
-            <a href="Williams.html" target="_blank">FW46</a>
+            <a href="McLaren.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="">
+                <figcaption>MCL38</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="Visa cash app RB.html" target="_blank">VCARB01</a>
+            <a href="Aston Martin.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="">
+                <figcaption>AMR24</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="Stake Team.html" target="_blank">C44</a>
+            <a href="Alpine.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/alpine-a524-2.jpg" alt="">
+                <figcaption>A524</figcaption>
+            </figure>
+        </a>
         </li>
         <li>
-            <a href="Haas.html" target="_blank">VF24</a>
+            <a href="Williams.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="">
+                <figcaption>FW46</figcaption>
+            </figure>
+        </a>
+        </li>
+        <li>
+            <a href="Visa cash app RB.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="">
+                <figcaption>VCARB01</figcaption>
+            </figure>
+        </a>
+        </li>
+        <li>
+            <a href="Stake Team.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="">
+                <figcaption>C44</figcaption>
+            </figure>
+        </a>
+        </li>
+        <li>
+            <a href="Haas.html" target="_blank">
+            <figure>
+                <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="">
+                <figcaption>VF24</figcaption>
+            </figure>
+        </a>
         </li>
     </ol>
 </body>
