--- a/Mercedes.html
+++ b/Mercedes.html
@@ -12,7 +12,7 @@
     <p>La presentazione della W15 è avvenuta il 14 febbraio.</p>
     <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="Presentazione della W15">
     <ul>
-        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/George_Russell" target="_blank">George Russell</a> e <a href="https://it.wikipedia.org/wiki/Lewis_Hamilton" target="_blank">Lewis Hamilton</a>;</li>
+        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/George_Russell_(pilota_automobilistico)" target="_blank">George Russell</a> e <a href="https://it.wikipedia.org/wiki/Lewis_Hamilton" target="_blank">Lewis Hamilton</a>;</li>
         <li>Posizione in classifica 2023: 2° con 409 punti.</li>
     </ul>
 </body>
