--- a/Red Bull.html
+++ b/Red Bull.html
@@ -12,7 +12,7 @@
     <p>La presentazione della RB20 è avvenuta il 15 febbraio.</p>
     <img src="presentazioni 2024/rb20.webp" alt="Presentazione della RB20">
     <ul>
-        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Max_Verstappen" target="_blank">Max Verstappen</a> e <a href="https://it.wikipedia.org/wiki/Sergio_Perez" target="_blank">Sergio Perez</a>;</li>
+        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Max_Verstappen" target="_blank">Max Verstappen</a> e <a href="https://it.wikipedia.org/wiki/Sergio_P%C3%A9rez_(pilota_automobilistico)" target="_blank">Sergio Perez</a>;</li>
         <li>Posizione in classifica 2023: 1° con 860 punti.</li>
     </ul>
 </body>
