--- a/Stake Team.html
+++ b/Stake Team.html
@@ -12,7 +12,7 @@
     <p>La presentazione della C44 è avvenuta il 5 febbraio.</p>
     <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="Presentazione della C44">
     <ul>
-        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Zhou_Guanyu" target="_blank">Zhou Guanyu</a> e <a href="https://it.wikipedia.org/wiki/Valteri_Bottas" target="_blank">Valteri Bottas</a>;</li>
+        <li>Piloti per il 2024: <a href="https://it.wikipedia.org/wiki/Zhou_Guanyu" target="_blank">Zhou Guanyu</a> e <a href="https://it.wikipedia.org/wiki/Valtteri_Bottas" target="_blank">Valtteri Bottas</a>;</li>
         <li>Posizione in classifica 2023: 9° con 16 punti.</li>
     </ul>
 </body>
