--- a/Aston Martin.html
+++ b/Aston Martin.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Aston Martin.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>Aston Martin</H1>
     <p>La presentazione della AMR24 è avvenuta il 12 febbraio.</p>
