--- a/Ferrari.html
+++ b/Ferrari.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Ferrari.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>Ferrari</H1>
     <p>La presentazione della SF-24 è avvenuta il 13 febbraio.</p>
