--- a/Haas.html
+++ b/Haas.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Haas.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <h1>Haas</h1>
     <p>La presentazione della VF24 è avvenuta il 2 febbraio.</p>
