--- a/McLaren.html
+++ b/McLaren.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/McLaren.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>McLaren</H1>
     <p>La presentazione della MCL38 è avvenuta il 14 febbraio.</p>
