--- a/Red Bull.html
+++ b/Red Bull.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Red Bull.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>Red Bull</H1>
     <p>La presentazione della RB20 è avvenuta il 15 febbraio.</p>
