--- a/Stake Team.html
+++ b/Stake Team.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Stake Team.CSS">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>Stake team</H1>
     <p>La presentazione della C44 è avvenuta il 5 febbraio.</p>
