--- a/Williams.html
+++ b/Williams.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Williams.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <h1>Williams</h1>
     <p>La presentazione della FW46 è avvenuta il 5 febbraio.</p>
