--- a/presentazioni.html
+++ b/presentazioni.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/presentazioni.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
