--- a/Alpine.html
+++ b/Alpine.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Alpine.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <h1>Alpine</h1>
     <p>La presentazione della A524 è avvenuta il 7 febbraio.</p>
