--- a/Mercedes.html
+++ b/Mercedes.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Mercedes.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <H1>Mercedes</H1>
     <p>La presentazione della W15 è avvenuta il 14 febbraio.</p>
