--- a/Visa cash app RB.html
+++ b/Visa cash app RB.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/tutti.css">
     <link rel="stylesheet" href="css/Visa cash app RB.css">
 </head>
+<header>
+    <figure>
+        <img src="" alt="">
+    </figure>
+</header>
 <body>
     <h1>Visa cash app RB</h1>
     <p>La presentazione della VCARB01 è avvenuta l'8 febbraio.</p>
