--- a/Haas.html
+++ b/Haas.html
@@ -9,7 +9,8 @@
 </head>
 <header>
     <figure>
-        <img src="" alt="">
+        <img src="presentazioni 2024/logo haas.webp" alt="" class="sinistra">
+        <img src="presentazioni 2024/logo haas.webp" alt="" class="destra">
     </figure>
 </header>
 <body>
