--- a/McLaren.html
+++ b/McLaren.html
@@ -9,7 +9,8 @@
 </head>
 <header>
     <figure>
-        <img src="" alt="">
+        <img src="presentazioni 2024/logo williams.jpg" alt="" class="sinistra">
+        <img src="presentazioni 2024/logo williams.jpg" alt="" class="destra">
     </figure>
 </header>
 <body>
