--- a/presentazioni 24.html
+++ b/presentazioni 24.html
@@ -17,7 +17,7 @@
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
         <li>
-            <a href="Red Bull.html" target="_blank">
+            <a href="Red Bull24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/rb20.webp" alt="">
                 <figcaption>RB20</figcaption>
@@ -25,7 +25,7 @@
         </a>
         </li>
         <li>
-            <a href="Mercedes.html" target="_blank">
+            <a href="Mercedes24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="">
                 <figcaption>W15</figcaption>
@@ -33,7 +33,7 @@
         </a>
         </li>
         <li>
-            <a href="Ferrari.html" target="_blank">
+            <a href="Ferrari24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="">
                 <figcaption>SF24</figcaption>
@@ -41,7 +41,7 @@
         </a>
         </li>
         <li>
-            <a href="McLaren.html" target="_blank">
+            <a href="McLaren24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="">
                 <figcaption>MCL38</figcaption>
@@ -49,7 +49,7 @@
         </a>
         </li>
         <li>
-            <a href="Aston Martin.html" target="_blank">
+            <a href="Aston Martin24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="">
                 <figcaption>AMR24</figcaption>
@@ -57,7 +57,7 @@
         </a>
         </li>
         <li>
-            <a href="Alpine.html" target="_blank">
+            <a href="Alpine24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/alpine-a524-2.jpg" alt="">
                 <figcaption>A524</figcaption>
@@ -65,7 +65,7 @@
         </a>
         </li>
         <li>
-            <a href="Williams.html" target="_blank">
+            <a href="Williams24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="">
                 <figcaption>FW46</figcaption>
@@ -73,7 +73,7 @@
         </a>
         </li>
         <li>
-            <a href="Visa cash app RB.html" target="_blank">
+            <a href="Visa cash app RB24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="">
                 <figcaption>VCARB01</figcaption>
@@ -81,7 +81,7 @@
         </a>
         </li>
         <li>
-            <a href="Stake Team.html" target="_blank">
+            <a href="Stake Team24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="">
                 <figcaption>C44</figcaption>
@@ -89,7 +89,7 @@
         </a>
         </li>
         <li>
-            <a href="Haas.html" target="_blank">
+            <a href="Haas24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="">
                 <figcaption>VF24</figcaption>
