--- a/presentazioni 24.html
+++ b/presentazioni 24.html
@@ -20,7 +20,11 @@
             <a href="Red Bull24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/rb20.webp" alt="">
-                <figcaption>RB20</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo red bull.webp" alt="" class="sinistra">
+                    <p>RB20</p>
+                    <img src="presentazioni 2024/logo red bull.webp" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -28,7 +32,11 @@
             <a href="Mercedes24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="">
-                <figcaption>W15</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="sinistra">
+                    <p>W15</p>
+                    <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -36,7 +44,11 @@
             <a href="Ferrari24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="">
-                <figcaption>SF24</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo ferrari.png" alt="" class="sinistra">
+                    <p>SF24</p>
+                    <img src="presentazioni 2024/logo ferrari.png" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -44,7 +56,11 @@
             <a href="McLaren24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="">
-                <figcaption>MCL38</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo mclaren.avif" alt="" class="sinistra">
+                    <p>MCL38</p>
+                    <img src="presentazioni 2024/logo mclaren.avif" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -52,7 +68,11 @@
             <a href="Aston Martin24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="">
-                <figcaption>AMR24</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="sinistra">
+                    <p>AMR24</p>
+                    <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -60,7 +80,11 @@
             <a href="Alpine24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/alpine-a524-2.jpg" alt="">
-                <figcaption>A524</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo alpine.png" alt="" class="sinistra">
+                    <p>A524</p>
+                    <img src="presentazioni 2024/logo alpine.png" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -68,7 +92,11 @@
             <a href="Williams24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="">
-                <figcaption>FW46</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo williams.jpg" alt="" class="sinistra">
+                    <p>FW46</p>
+                    <img src="presentazioni 2024/logo williams.jpg" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -76,7 +104,11 @@
             <a href="Visa cash app RB24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="">
-                <figcaption>VCARB01</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="sinistra">
+                    <p>VCARB01</p>
+                    <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -84,7 +116,11 @@
             <a href="Stake Team24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="">
-                <figcaption>C44</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo stake.avif" alt="" class="sinistra">
+                    <p>C44</p>
+                    <img src="presentazioni 2024/logo stake.avif" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
@@ -92,7 +128,11 @@
             <a href="Haas24.html" target="_blank">
             <figure>
                 <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="">
-                <figcaption>VF24</figcaption>
+                <figcaption>
+                    <img src="presentazioni 2024/logo haas.webp" alt="" class="sinistra">
+                    <p>VF24</p>
+                    <img src="presentazioni 2024/logo haas.webp" alt="" class="destra">
+                </figcaption>
             </figure>
         </a>
         </li>
