--- a/presentazioni F1 2024/presentazioni 24.html
+++ b/presentazioni F1 2024/presentazioni 24.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,129 +14,152 @@
         <img src="presentazioni 2024/logo f1.png" alt="" class="destra">
     </figure>
 </header>
+
 <body>
     <h1>Queste sono le vetture per il 2024:</h1>
     <ol>
         <li>
             <a href="Red Bull24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/rb20.webp" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo red bull.webp" alt="" class="sinistra">
-                    <p>RB20</p>
-                    <img src="presentazioni 2024/logo red bull.webp" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/rb20.webp" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo red bull.webp" alt="" class="sinistra">
+                            <p>RB20</p>
+                            <img src="presentazioni 2024/logo red bull.webp" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Mercedes24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="sinistra">
-                    <p>W15</p>
-                    <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/mercedes-f1-w15.jpg" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="sinistra">
+                            <p>W15</p>
+                            <img src="presentazioni 2024/logo mercedes.jpg" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Ferrari24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo ferrari.png" alt="" class="sinistra">
-                    <p>SF24</p>
-                    <img src="presentazioni 2024/logo ferrari.png" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/La presentazione della nuova Ferrari SF-24 (1).gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo ferrari.png" alt="" class="sinistra">
+                            <p>SF24</p>
+                            <img src="presentazioni 2024/logo ferrari.png" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="McLaren24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo mclaren.avif" alt="" class="sinistra">
-                    <p>MCL38</p>
-                    <img src="presentazioni 2024/logo mclaren.avif" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/2024-McLaren-F1-Livery-Reveal.gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo mclaren.avif" alt="" class="sinistra">
+                            <p>MCL38</p>
+                            <img src="presentazioni 2024/logo mclaren.avif" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Aston Martin24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="sinistra">
-                    <p>AMR24</p>
-                    <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/AMR24 Reveal _ Hyper-focus.gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="sinistra">
+                            <p>AMR24</p>
+                            <img src="presentazioni 2024/logo aston martin.jpg" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Alpine24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/alpine-a524-2.jpg" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo alpine.png" alt="" class="sinistra">
-                    <p>A524</p>
-                    <img src="presentazioni 2024/logo alpine.png" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/alpine-a524-2.jpg" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo alpine.png" alt="" class="sinistra">
+                            <p>A524</p>
+                            <img src="presentazioni 2024/logo alpine.png" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Williams24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo williams.jpg" alt="" class="sinistra">
-                    <p>FW46</p>
-                    <img src="presentazioni 2024/logo williams.jpg" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/The-moment-Williams-revealed-the-FW46-_.gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo williams.jpg" alt="" class="sinistra">
+                            <p>FW46</p>
+                            <img src="presentazioni 2024/logo williams.jpg" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Visa cash app RB24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="sinistra">
-                    <p>VCARB01</p>
-                    <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/yuki-tsunoda-vcarb-01.jpg" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="sinistra">
+                            <p>VCARB01</p>
+                            <img src="presentazioni 2024/logo vcarb.jpg" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Stake Team24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo stake.avif" alt="" class="sinistra">
-                    <p>C44</p>
-                    <img src="presentazioni 2024/logo stake.avif" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+                    <img src="presentazioni 2024/STAKE-F1-Team_-C44-launch-for-the-2024-Formula-1-Season.gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo stake.avif" alt="" class="sinistra">
+                            <p>C44</p>
+                            <img src="presentazioni 2024/logo stake.avif" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
         <li>
             <a href="Haas24.html" target="_blank">
-            <figure>
-                <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="">
-                <figcaption>
-                    <img src="presentazioni 2024/logo haas.webp" alt="" class="sinistra">
-                    <p>VF24</p>
-                    <img src="presentazioni 2024/logo haas.webp" alt="" class="destra">
-                </figcaption>
-            </figure>
-        </a>
+                <figure>
+
+                    <img src="presentazioni 2024/First-Look_-Haas-F1-Team_s-VF-24-Unveiled-for-2024-Season_.gif" alt="">
+                    <figcaption>
+                        <section>
+                            <img src="presentazioni 2024/logo haas.webp" alt="" class="sinistra">
+                            <p>VF24</p>
+                            <img src="presentazioni 2024/logo haas.webp" alt="" class="destra">
+                        </section>
+                    </figcaption>
+                </figure>
+            </a>
         </li>
     </ol>
 </body>
+
 </html>
